--- a/Deep_learning with Tensorflow and Keras.ipynb
+++ b/Deep_learning with Tensorflow and Keras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdScQuP/rn5aGGMVgOsE4G",
+      "authorship_tag": "ABX9TyPj9yZhNcVJGsk2CnmbO7xW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,31 +28,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "jDi82zPF1FeD",
-        "outputId": "40cadd1f-ce18-40cd-cbe8-ba33a7502155",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c5eeb567-6da5-4503-e23d-71b179e37727"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'hello' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-f572d396fae9>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhello\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'hello' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello\n"
           ]
         }
       ],
       "source": [
         "print(\"hello\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Rov9YC-Ai7-3"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
