--- a/Deep_learning with Tensorflow and Keras.ipynb
+++ b/Deep_learning with Tensorflow and Keras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPj9yZhNcVJGsk2CnmbO7xW",
+      "authorship_tag": "ABX9TyMkTyugiLbzOs6CSSHDdJKn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,36 +27,23 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "id": "jDi82zPF1FeD",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c5eeb567-6da5-4503-e23d-71b179e37727"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "hello\n"
-          ]
-        }
-      ],
+      "cell_type": "markdown",
       "source": [
-        "print(\"hello\")"
-      ]
+        "### TensorFlow Tensors"
+      ],
+      "metadata": {
+        "id": "AriX1AW1tXQD"
+      }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "- tenosrs are multidimmentioanl arrays\n",
+        "- ordered arrangement of numbers"
+      ],
       "metadata": {
-        "id": "Rov9YC-Ai7-3"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "maaZUsz0tdUp"
+      }
     }
   ]
 }
