--- a/Deep_learning with Tensorflow and Keras.ipynb
+++ b/Deep_learning with Tensorflow and Keras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkTyugiLbzOs6CSSHDdJKn",
+      "authorship_tag": "ABX9TyOXXeAcTt/vgR7zPnOTH/em",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,12 +38,28 @@
     {
       "cell_type": "markdown",
       "source": [
-        "- tenosrs are multidimmentioanl arrays\n",
-        "- ordered arrangement of numbers"
+        "- tensors are multidimensional arrays\n",
+        "- ordered arrangement of numbers\n",
+        "- Tensors could be of zero dimmention only if we have one element (e.g. 1) - 0D\n",
+        "- Tensors could be of one dimmention ([2,0,-1]) - 1D\n",
+        "- or a matrix or a 2D dimmentional matrix\n",
+        "\n",
+        "important:\n",
+        "\n",
+        "- to create a 1D array we stack up different 0D arrays, similarly to create 2D tensors we stack up multiple 1D arrays.\n"
       ],
       "metadata": {
         "id": "maaZUsz0tdUp"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "r126Vf5quOHJ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
