--- a/Deep_learning with Tensorflow and Keras.ipynb
+++ b/Deep_learning with Tensorflow and Keras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXXeAcTt/vgR7zPnOTH/em",
+      "authorship_tag": "ABX9TyNW1tJXYqpyXRfkoHWnU/O+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,11 @@
         "\n",
         "important:\n",
         "\n",
-        "- to create a 1D array we stack up different 0D arrays, similarly to create 2D tensors we stack up multiple 1D arrays.\n"
+        "- to create a 1D array we stack up different 0D arrays, similarly to create 2D tensors we stack up multiple 1D arrays.\n",
+        "- Tensors have what we call a shape\n",
+        "- [2,0,-1] 1D tensor has a shape of (3,)\n",
+        "- similarly for a 2D tensor we can have a shape of 4X3. (4,3)\n",
+        "- for a 3D tensor (4,2,3) - 4 2D tensors, each 2D tensor has 2 rows and each row has 1D tensor of 3 cols\n"
       ],
       "metadata": {
         "id": "maaZUsz0tdUp"
