--- a/Deep_learning with Tensorflow and Keras.ipynb
+++ b/Deep_learning with Tensorflow and Keras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPklnwL7Bbx7y331yfSj0IZ",
+      "authorship_tag": "ABX9TyNN9CLZx0UQjw9Fi2ceXbWB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "r126Vf5quOHJ"
       },
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -79,9 +79,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G4-GFsXOwdXf",
-        "outputId": "dba65879-b980-4484-c478-8c819810e995"
+        "outputId": "ccfa71f8-b285-400a-97e7-b120b6146c47"
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,9 +103,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-6xmZuo9wl9b",
-        "outputId": "98fdb068-9639-49c6-bf05-dc0efe557029"
+        "outputId": "40e50856-38f3-439e-8df1-47a674b27fc3"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,9 +127,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4tIrSmu_w7X7",
-        "outputId": "bde6ebaf-7a3e-470e-8bbc-c55126028711"
+        "outputId": "d38b4749-90fd-4cdb-dcdf-6c9cc15e6f96"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,9 +153,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SZaMiZEjxC9X",
-        "outputId": "da215a99-f639-4495-fea2-1ee95c419b6f"
+        "outputId": "fa9477fa-9781-4c29-8dc8-5572ef06e221"
       },
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,9 +183,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dUG_6h4Oxj-5",
-        "outputId": "24f66816-8070-42ff-a3df-a46acce49fbc"
+        "outputId": "26494cff-5ce5-4a9a-d52a-ce605cc81526"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -195,7 +195,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 6
         }
       ]
     },
@@ -209,9 +209,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oSxODS1I9W-6",
-        "outputId": "7e51d2b2-56b4-424f-f9d9-ca483ac51a64"
+        "outputId": "3bf36d64-d476-4b6e-ef40-529f5ac6459f"
       },
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -221,7 +221,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 7
         }
       ]
     },
@@ -268,9 +268,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p9VYM97S9c8D",
-        "outputId": "a046b0b3-181b-4afd-9ee7-598f15512c4b"
+        "outputId": "8637f989-f847-4c57-d1cc-44c3c9822d4f"
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,9 +315,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WBsPPYry-v6v",
-        "outputId": "bb30bf1d-1654-447c-e66e-840ee37c9538"
+        "outputId": "ceab5ee1-2b5c-4f21-c79f-d80df1adbdb0"
       },
-      "execution_count": 14,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,9 +347,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3uLpuhXhCOBc",
-        "outputId": "4c7a6bd0-b5ad-473b-9402-29b27a80e3e6"
+        "outputId": "6c182f07-88a5-45a9-ba58-07cb5f8a0170"
       },
-      "execution_count": 15,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,9 +375,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C2gf9b1MCoJ2",
-        "outputId": "47d0faa6-f627-4daa-b332-673c95a37626"
+        "outputId": "aba8fe7a-6aae-4135-8692-ca378faeb039"
       },
-      "execution_count": 23,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,9 +410,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bFUyiVOzDCn1",
-        "outputId": "d6a66b83-0bde-4f64-8449-ff67edbfb74f"
+        "outputId": "d6b3ad00-7446-4bf3-fb4e-d1a9fd48d08f"
       },
-      "execution_count": 24,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -436,9 +436,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bIVXk3D5GMcy",
-        "outputId": "7648a8fa-e7e4-4de3-ec27-6395a70cd125"
+        "outputId": "30290ba8-b820-4c0c-f6c0-762429222f46"
       },
-      "execution_count": 25,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -462,9 +462,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kHfm13ZvGSaa",
-        "outputId": "4f66982d-4479-45f9-ca79-0f9df4c7fdf1"
+        "outputId": "a11d45b1-3c52-4d84-df01-60060bc00c37"
       },
-      "execution_count": 26,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -486,9 +486,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "poVKzN-3H6F9",
-        "outputId": "b7f20b68-0c96-46a7-95eb-e6fa03536e7f"
+        "outputId": "d01285af-59eb-4cdc-a43f-4c0970d3cb7b"
       },
-      "execution_count": 27,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,9 +511,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3NW5razwIM0i",
-        "outputId": "02096301-ec07-4925-c798-7500ff9a55f1"
+        "outputId": "138b979a-ba39-4c3b-aeb3-204f6132a364"
       },
-      "execution_count": 28,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -534,9 +534,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fX12ObWjIgve",
-        "outputId": "8fdb432c-110b-404f-f2c3-a7f002adfc46"
+        "outputId": "a2830606-1248-4b59-886b-32e53d5594a7"
       },
-      "execution_count": 30,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -557,21 +557,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zh0cSjFlIlkA",
-        "outputId": "4580bd3e-cc96-45c6-f716-cf1582f00ca8"
+        "outputId": "f0d654a8-603e-4f0f-d8c7-d6092dd1269f"
       },
-      "execution_count": 31,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<tf.Tensor: shape=(2, 3), dtype=float32, numpy=\n",
-              "array([[ 0.7186693 , -0.06688397, -0.8401798 ],\n",
-              "       [ 0.7212655 ,  0.1167876 , -1.3126295 ]], dtype=float32)>"
+              "array([[ 2.8992274 , -0.36461154,  0.12102491],\n",
+              "       [-1.0935173 , -3.5754175 ,  1.5185989 ]], dtype=float32)>"
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 18
         }
       ]
     },
@@ -585,9 +585,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "umvpchonJOVA",
-        "outputId": "83a2e500-a4c0-49b9-9b02-74e3a0d5bb31"
+        "outputId": "34e5ed41-aa39-4623-e1f7-b0fab782ea4d"
       },
-      "execution_count": 32,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -599,17 +599,233 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Indexing in Tensorflow"
+      ],
+      "metadata": {
+        "id": "WXZh11BNfHeF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tf.range(0,5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B2OKvU7TJSL1",
+        "outputId": "b513da2f-b9ba-40cc-d548-69ff81cd17a6"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(5,), dtype=int32, numpy=array([0, 1, 2, 3, 4], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
         }
       ]
     },
     {
       "cell_type": "code",
+      "source": [
+        "tensor_one_d.shape\n"
+      ],
+      "metadata": {
+        "id": "kWCqCD2Lf3Qj",
+        "outputId": "22cc2fff-6fff-4eef-bae2-ef5323bd04d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "TensorShape([3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_one_d[0:1]"
+      ],
+      "metadata": {
+        "id": "gObTJl7OhvZh",
+        "outputId": "e9d73371-a99f-43ad-af2c-dd62cf29f9ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(1,), dtype=int32, numpy=array([1], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_two_d"
+      ],
+      "metadata": {
+        "id": "MabAzFcUiK2t",
+        "outputId": "c7fa249d-007e-4fb8-870c-06b11c087a00",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 3), dtype=int32, numpy=\n",
+              "array([[1, 2, 3],\n",
+              "       [4, 5, 6]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_two_d[0,0:2]"
+      ],
+      "metadata": {
+        "id": "CLZ-sIhsiNcZ",
+        "outputId": "cd323109-e070-441e-9d0c-ee8518e798b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2,), dtype=int32, numpy=array([1, 2], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_four_d\n"
+      ],
+      "metadata": {
+        "id": "OwVQ_u9FiSre",
+        "outputId": "3efc9015-8e2f-4ede-92fe-79f821c34803",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2, 2, 3), dtype=int32, numpy=\n",
+              "array([[[[ 1,  2,  3],\n",
+              "         [ 4,  5,  6]],\n",
+              "\n",
+              "        [[ 7,  8,  9],\n",
+              "         [10, 11, 12]]],\n",
+              "\n",
+              "\n",
+              "       [[[13, 14, 15],\n",
+              "         [16, 17, 18]],\n",
+              "\n",
+              "        [[19, 20, 21],\n",
+              "         [22, 23, 24]]]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_four_d[:, 0, 0, :]"
+      ],
+      "metadata": {
+        "id": "V4PkzPisiWkz",
+        "outputId": "f18542c6-3817-4b00-c52a-7e9bb7dbd144",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 3), dtype=int32, numpy=\n",
+              "array([[ 1,  2,  3],\n",
+              "       [13, 14, 15]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Tensorflow Linear algebra Operations"
+      ],
+      "metadata": {
+        "id": "RSZkILDvqhzz"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "B2OKvU7TJSL1"
+        "id": "FG6IqfHXih6G"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     }
   ]
