--- a/DeepLearning_with_process_mining.ipynb
+++ b/DeepLearning_with_process_mining.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLcygQUkMMeFKd6hT/Ip1s",
+      "mount_file_id": "1cG5ozxkoKIB5Ka2NtioqAJdqXWfjiLiS",
+      "authorship_tag": "ABX9TyOueBL1h+2COGoq7knIBjPW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +34,20 @@
         "id": "MjcGiwqbbWHF"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# prompt: how to load datasets form the google drive\n",
+        "\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Replace 'path/to/your/file.csv' with the actual path to your file in Google Drive\n",
+        "file_path = '/content/drive/MyDrive/Colab Notebooks/event_logs'\n",
+        "df = pd.read_csv(file_path)\n",
+        "\n",
+        "# Now you can work with the DataFrame 'df'\n",
+        "print(df.head())\n"
+      ]
     }
   ]
 }
